--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -10,6 +10,14 @@ body {
     margin: 0;
 }
 
+form{
+    text-align: center;
+}
+
+#notfound{
+    color: #F00;
+}
+
 #logo {
     font-size: 48px;
     margin-bottom: 20px;
